--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav>
         <a href="#/">Home</a>
-        <a href="#/closeup">Close Up</a>
+        <a href="#/detail">Close Up</a>
         <a href="#/add">Add</a>
       </nav>
       <div class="main-content" ui-view>
