--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLOSE UP</title>
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Hind+Guntur|Megrim|Poiret+One|Special+Elite" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
