--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Hind+Guntur|Megrim|Poiret+One|Special+Elite" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body ng-app="app">
     <div class="container">
