--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <body ng-app="app">
     <div class="container">
       <nav>
-        <a href="#/">Home</a>
+        <a href="#/">Home |</a>
         <a href="#/add">Add</a>
       </nav>
       <div class="main-content" ui-view>
