corrected add and comments

--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body ng-app="app">
-    <div class="container" ng-controller="DetailController">
+    <div class="container">
       <nav>
         <a href="#/">Home |</a>
-        <a href="#/add">Add</a>
+        <a href="#/add">Add |</a>
+        <a href="#/about">About</a>
       </nav>
       <div class="main-content" ui-view>
       </div>
